tests/snapshots/run_wpt_conformance__litert_reduceSumSquare_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum_square.https.any.js reduceSumSquare float32 0D tensor empty axes, litert
 reduce_sum_square :: reduceSumSquare float32 0D tensor empty axes: index 0: actual=52.561535 expected=2762.7148 ulp=47869037 tolerance=16
  inputs: reduceSumSquareInput: [52.5615348815918]
  expected reduceSumSquareOutput: [2762.7148]
  actual reduceSumSquareOutput: [52.561535]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumSquareInput: f32[];
  }

  nodes {
    [reduceSumSquareOutput] = reduceSumSquare(reduceSumSquareInput, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceSumSquareOutput; }
}
